src/objects/Extentia_SIM__MP_AddressInfo__c.object
<CustomObject>
    <fields>
        <fullName>Extentia_SIM__CityName__c</fullName>
        <label>CityName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__CombinationKey__c</fullName>
        <label>CombinationKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extentia_SIM__CountryName__c</fullName>
        <label>CountryName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__StateName__c</fullName>
        <label>StateName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MP_AddressInfo</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>MP_AddressInfo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MP_AddressInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>